refactor(build): 优化打包脚本并调整项目结构
- 删除冗余的 `package-build.js` 文件，将打包逻辑直接集成到 `package.json` 中
- 更新 `.gitignore`，添加 `ms-playwright` 目录忽略
- 调整 `main.js` 中的路径处理逻辑，使用 `process.cwd()` 获取当前工作目录
- 更新 `package.json` 的 `pkg` 配置，添加 `run` 目录和浏览器相关资源的打包支持

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node main.js",
     "install-browsers": "playwright install",
-    "build": "node package-build.js"
+    "build": "pkg main.js --targets node18-win-x64 --output auto_d_price.exe"
   },
   "dependencies": {
     "crypto-js": "^4.2.0",
@@ -18,10 +18,20 @@
   "pkg": {
     "assets": [
       "node_modules/**/*",
-      "storage/**/*"
+      "storage/**/*",
+      "run/**/*",
+      "node_modules/playwright-core/.local-browsers/**/*"
     ],
     "targets": [
       "node18-win-x64"
-    ]
+    ],
+    "outputPath": "dist",
+    "mountpoints": [
+      ["storage", "./storage"],
+      ["run", "./run"]
+    ],
+    "scripts": {
+      "preinstall": "mkdir -p storage run"
+    }
   }
 }
