删除过期的可执行文件，更新主逻辑以添加MySQL数据库支持和程序访问验证功能，增强了错误处理和日志记录机制。

--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "build": "pkg main.js --targets node18-win-x64 --output auto_d_price.exe"
   },
   "dependencies": {
-    "crypto-js": "^4.2.0",
-    "playwright": "^1.42.1",
+    "crypto-js": "^4.1.1",
+    "playwright": "^1.40.0",
     "tesseract.js": "^6.0.1",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "mysql2": "^3.6.5"
   },
   "bin": "main.js",
   "pkg": {
